--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "ng serve",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor"
+    "e2e": "protractor",
+    "build:sass": "node-sass assets/sass -o assets/css",
+    "watch:sass": "npm run build:sass && node-sass assets/sass -wo assets/css"
   },
   "private": true,
   "dependencies": {
@@ -20,6 +22,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
@@ -40,7 +43,8 @@
     "karma-remap-istanbul": "^0.2.1",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
+    "tslint": "^4.5.1",
+    "tslint-loader": "^3.5.3",
     "typescript": "~2.0.3"
   }
 }
