--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "build:sass": "node-sass assets/sass -o assets/css",
-    "watch:sass": "npm run build:sass && node-sass assets/sass -wo assets/css"
+    "precache": "sw-precache --verbose --config=sw-precache-config.js"
   },
   "private": true,
   "dependencies": {
@@ -23,7 +22,11 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular2-mdl-ext/popover": "^0.6.0",
+    "@angular2-mdl-ext/select": "^0.10.3",
+    "angular2-mdl": "^2.13.2",
     "core-js": "^2.4.1",
+    "custom-event-polyfill": "^0.3.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
@@ -41,7 +44,10 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "node-sass": "^4.5.3",
     "protractor": "~4.0.13",
+    "sass-loader": "^6.0.6",
+    "sw-precache": "^5.2.0",
     "ts-node": "1.2.1",
     "tslint": "^4.5.1",
     "tslint-loader": "^3.5.3",
