--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@angular2-mdl-ext/popover": "^0.6.0",
     "@angular2-mdl-ext/select": "^0.10.3",
     "angular2-mdl": "^2.13.2",
+    "angular2-oauth2": "^1.3.10",
     "core-js": "^2.4.1",
     "custom-event-polyfill": "^0.3.0",
+    "express": "^4.16.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
